crates/vexor-compiler/tests/golden/error/output/match_missing_arrow.err
Error: parse error
   ╭─[ input:4:9 ]
   │
 4 │     100 Circle(100)
   │         ┬  
   │         ╰── invalid match arm
   │         │  
   │         ╰── expected `=>`
───╯
